[B]0.9.0[/B]

***Working towards Kodi Jarvis release***

- [REMOVED DEPENDENCY] script.thedeadman.functions (Nice one team Kodi!)
- [REMOVED DEPENDENCY] script.globalsearch
- [REMOVED DEPENDENCY] script.artistslideshow
- [REMOVED] DialogPeripheralManager.xml
- [REMOVED] DialogKaraokeSongSelector.xml
- [REMOVED] DialogKaraokeSongSelectorLarge.xml
- [REMOVED] MusicKaraokeLyrics.xml
- [REMOVED] References to "allowoverlay" tag
- [REMOVED] mymusicsongs.xml
- [REMOVED] videooverlay.xml
- [REMOVED] musicoverlay.xml
- [NEW] custom_musicOverlay.xml
- [REMOVED] References to "zorder" tag
- [NEW] DialogPVRInfo.xml
- [REMOVED] DialogPVRGuideInfo.xml
- [REMOVED] DialogPVRRecordingInfo.xml
- [REMOVED] VisualisationPresetList.xml
- [NEW] EventLog.xml
- [MODIFIED] dialogKeyboard.xml - additional labels for BaiduPy input added

- [NEW] DialogAudioDSPManager.xml
- [NEW] DialogAudioDSPSettings.xml

- [MODIFIED] DialogAddonInfo.xml - remove button id="11"
- [MODIFIED] DialogKaiToast.xml - remove ID's 403-405
- [MODIFIED] DialogVideoInfo.xml - add button ID 7, replace user rating value
- [MODIFIED] MyMusicNav.xml - remove files node button



***To do***

MyVideoPlaylist.xml

Finish Pictures section update (info screen esp.)

Openelec settings link (more important than Rom collection browser stuff)

PVR Recording indicators
PVR Recording scheduler (integrate with recordings)

Check extra button to dialogAddonInfo.xml (auto update)

on startup: add check for parent folder items and warn user to turn off: system.getbool(showparentdiritems)

Radio RDS test

Touchscreen controls on Android tablets (file seeking etc)

Expand menu system to add options for sub menu etc (see xbox NXE for inspiration)


[B]0.1.0[/B]
- Initial Commit

