@@ -33,7 +33,7 @@
                     <align>center</align>
                     <aligny>center</aligny>
                     <font>regularStrong</font>
-                    <textcolor>textActive</textcolor>
+                    <textcolor>textDisabled</textcolor>
                     <label>$INFO[ListItem.label]</label>
                 </control>
                 <control type="label">
@@ -45,7 +45,7 @@
                     <align>center</align>
                     <aligny>center</aligny>
                     <font>buttonTitle</font>
-                    <textcolor>textActive</textcolor>
+                    <textcolor>textDisabled</textcolor>
                     <label>$INFO[ListItem.Property(Addon.Summary)]</label>
                 </control>
                 <control type="image">
