@@ -1,0 +1,301 @@
+<?xml version="1.0" encoding="utf-8"?>
+<window>
+    <defaultcontrol always="true">5</defaultcontrol>
+    <include>fadeInOut</include>
+    <controls>
+        <!--fake list used as container -->
+        <!-- use Container(999).ListItem to get all info -->
+        <!-- all normal listitem properties will be available -->
+        <control type="list" id="999">
+            <posx>0</posx>
+            <posy>0</posy>
+            <itemlayout />
+            <focusedlayout />
+        </control>
+        <control type="group">
+            <!--background / fanart-->
+            <control type="image">
+                <posx>0</posx>
+                <posy>0</posy>
+                <include>dimensionsFullscreen</include>
+                <texture>colors/black.png</texture>
+                <colordiffuse>ffffffff</colordiffuse>
+                <aspectratio>stretch</aspectratio>
+            </control>
+            <control type="image">
+                <posx>0</posx>
+                <posy>0</posy>
+                <include>dimensionsFullscreen</include>
+                <texture>$INFO[Container(999).listitem.art(fanart)]</texture>
+                <colordiffuse>ffffffff</colordiffuse>
+                <aspectratio>stretch</aspectratio>
+                <include>kenBurnsey</include>
+            </control>
+            <control type="image">
+                <include>dimensionsFullscreen</include>
+                <texture>vignette.png</texture>
+                <colordiffuse>ffffffff</colordiffuse>
+                <aspectratio>stretch</aspectratio>
+            </control>
+            <control type="image">
+                <posx>1-col</posx>
+                <posy>row-22-begin</posy>
+                <width>6-col</width>
+                <height>4-col</height>
+                <texture>$INFO[Container(999).ListItem.Art(clearlogo)]</texture>
+                <aspectratio align="left">keep</aspectratio>
+            </control>
+        </control>
+        <!--content is movie or tvshow (from XBMC Library)-->
+        <control type="group">
+            <posx>col-15-begin</posx>
+            <posy>0</posy>
+            <animation type="Windowopen">
+                <effect type="fade" start="0" end="100" time="300" delay="300"/>
+                <effect type="slide" start="800" end="0" tween="cubic" easing="out" time="400" delay="300"/>
+            </animation>
+            <animation type="conditional" condition="skin.string(showcast,true)">
+                <effect type="slide" start="0" end="0,-1080" tween="cubic" easing="out" time="400" delay="0"/>
+            </animation>
+            <!--overlay-->
+            <control type="image">
+                <posx>0</posx>
+                <posy>0</posy>
+                <width>10-col</width>
+                <height>fullscreenHeight</height>
+                <texture>colors/black.png</texture>
+                <colordiffuse>cc111111</colordiffuse>
+                <aspectratio>stretch</aspectratio>
+            </control>
+            <control type="image">
+                <posx>0</posx>
+                <posy>0</posy>
+                <width>10-col</width>
+                <height>row-5-begin</height>
+                <texture>colors/white.png</texture>
+                <colordiffuse>highlight</colordiffuse>
+                <aspectratio>stretch</aspectratio>
+            </control>
+            <control type="image">
+                <posx>0</posx>
+                <posy>row-5-begin</posy>
+                <width>10-col</width>
+                <height>1-row</height>
+                <texture>colors/white.png</texture>
+                <aspectratio>stretch</aspectratio>
+            </control>
+            <!--meta-->
+            <control type="panel">
+                <posx>12</posx>
+                <posy>7-row</posy>
+                <width>10-col</width>
+                <height>6-row</height>
+                <enable>false</enable>
+                <itemlayout width="5-col" height="2-row">
+                    <control type="label">
+                        <posx>12</posx>
+                        <posy>0</posy>
+                        <width>4-col-gutter</width>
+                        <font>itemSubTitle</font>
+                        <textcolor>highlight</textcolor>
+                        <label>$INFO[ListItem.label]</label>
+                        <shadowcolor>-</shadowcolor>
+                    </control>
+                    <control type="label">
+                        <posx>12</posx>
+                        <posy>32</posy>
+                        <width>4-col-gutter</width>
+                        <font>itemSubTitle</font>
+                        <textcolor>textActive</textcolor>
+                        <label fallback="31159">$INFO[ListItem.label2]</label>
+                        <shadowcolor>-</shadowcolor>
+                    </control>
+                </itemlayout>
+                <focusedlayout width="5-col" height="2-row">
+                </focusedlayout>
+                <content>
+                    <item>
+                        <label>$LOCALIZE[562]</label>
+                        <label2>$INFO[Container(999).ListItem.year]</label2>
+                        <thumb>-</thumb>
+                        <onclick>noop</onclick>
+                    </item>
+                    <item>
+                        <label>$LOCALIZE[31146]</label>
+                        <label2>$INFO[Container(999).ListItem.director]</label2>
+                        <thumb>-</thumb>
+                        <onclick>noop</onclick>
+                    </item>
+                    <item>
+                        <label>$LOCALIZE[515]</label>
+                        <label2>$INFO[Container(999).ListItem.genre]</label2>
+                        <thumb>-</thumb>
+                        <onclick>noop</onclick>
+                    </item>
+                    <item>
+                        <label>$LOCALIZE[563]</label>
+                        <label2>$INFO[Container(999).ListItem.UserRating,,/10]</label2>
+                        <thumb>-</thumb>
+                        <onclick>noop</onclick>
+                    </item>
+                </content>
+            </control>
+            <!--content-->
+            <control type="group">
+                <posx>24</posx>
+                <posy>row-1-begin</posy>
+                <control type="label">
+                    <posx>0</posx>
+                    <posy>0</posy>
+                    <width>672</width>
+                    <align>left</align>
+                    <height>3-row</height>
+                    <aligny>center</aligny>
+                    <font>pageTitle</font>
+                    <textcolor>textActive</textcolor>
+                    <label>$INFO[Container(999).ListItem.Label]</label>
+                    <wrapmultiline>true</wrapmultiline>
+                </control>
+                <control type="label">
+                    <posx>0</posx>
+                    <posy>4-row</posy>
+                    <width>672</width>
+                    <align>left</align>
+                    <font>itemSubTitle</font>
+                    <textcolor>black</textcolor>
+                    <label>$INFO[Container(999).ListItem.duration,, $LOCALIZE[31018]. ]$INFO[Container(999).listitem.MPAA,,.]</label>
+                    <shadowcolor>-</shadowcolor>
+                </control>
+                <!--synopsis-->
+                <control type="textbox">
+                    <posx>0</posx>
+                    <posy>10-row</posy>
+                    <font>textbox</font>
+                    <width>672</width>
+                    <align>left</align>
+                    <textcolor>textActive</textcolor>
+                    <height>484</height>
+                    <label fallback="31205">$INFO[Container(999).ListItem.plot]</label>
+                    <autoscroll delay="10000" time="1000" repeat="10000"/>
+                    <shadowcolor>-</shadowcolor>
+                </control>
+            </control>
+            <!--dialog controls-->
+            <control type="panel" id="5">
+                <posx>0</posx>
+                <posy>26-row</posy>
+                <width>10-col</width>
+                <height>6-row</height>
+                <itemgap>3</itemgap>
+                <orientation>vertical</orientation>
+                <itemlayout width="5-col" height="2-row">
+                    <control type="image">
+                        <posx>0</posx>
+                        <posy>0</posy>
+                        <width>1-col-textbox</width>
+                        <height>2-row</height>
+                        <aspectratio>stretch</aspectratio>
+                        <texture>colors/black.png</texture>
+                        <colordiffuse>textboxInactive</colordiffuse>
+                    </control>
+                    <control type="label">
+                        <posx>0</posx>
+                        <posy>0</posy>
+                        <width>1-col</width>
+                        <height>2-row</height>
+                        <align>center</align>
+                        <aligny>center</aligny>
+                        <font>symbolLarge</font>
+                        <textcolor>textActive</textcolor>
+                        <label>$INFO[ListItem.label2]</label>
+                        <shadowcolor>-</shadowcolor>
+                    </control>
+                    <control type="image">
+                        <posx>1-col</posx>
+                        <posy>0</posy>
+                        <width>4-col</width>
+                        <height>2-row</height>
+                        <aspectratio>stretch</aspectratio>
+                        <texture>colors/black.png</texture>
+                        <colordiffuse>textboxInactive</colordiffuse>
+                    </control>
+                    <control type="label">
+                        <posx>1-col-indent</posx>
+                        <posy>0</posy>
+                        <width>4-col-gutter</width>
+                        <height>2-row</height>
+                        <aligny>center</aligny>
+                        <font>buttonTitle</font>
+                        <textcolor>textActive</textcolor>
+                        <label>$INFO[ListItem.label]</label>
+                        <shadowcolor>-</shadowcolor>
+                    </control>
+                </itemlayout>
+                <focusedlayout width="5-col" height="2-row">
+                    <control type="image">
+                        <posx>0</posx>
+                        <posy>0</posy>
+                        <width>1-col</width>
+                        <height>2-row</height>
+                        <aspectratio>stretch</aspectratio>
+                        <texture>colors/white.png</texture>
+                        <colordiffuse>highlight</colordiffuse>
+                        <include>spinFocusIcon</include>
+                    </control>
+                    <control type="image">
+                        <posx>1-col</posx>
+                        <posy>0</posy>
+                        <width>4-col</width>
+                        <height>2-row</height>
+                        <aspectratio>stretch</aspectratio>
+                        <texture>colors/white.png</texture>
+                    </control>
+                    <control type="label">
+                        <posx>0</posx>
+                        <posy>0</posy>
+                        <width>1-col</width>
+                        <height>2-row</height>
+                        <align>center</align>
+                        <aligny>center</aligny>
+                        <font>symbolLarge</font>
+                        <textcolor>textActive</textcolor>
+                        <label>$INFO[ListItem.label2]</label>
+                        <shadowcolor>-</shadowcolor>
+                    </control>
+                    <control type="label">
+                        <posx>1-col-indent</posx>
+                        <posy>0</posy>
+                        <width>4-col-gutter</width>
+                        <height>2-row</height>
+                        <aligny>center</aligny>
+                        <font>buttonTitle</font>
+                        <textcolor>black</textcolor>
+                        <label>$INFO[ListItem.label]</label>
+                        <shadowcolor>-</shadowcolor>
+                    </control>
+                </focusedlayout>
+                <content>
+                    <item>
+                        <label>31075</label>
+                        <label2></label2>
+                        <thumb>-</thumb>
+                        <onclick>sendclick(2003,5)</onclick>
+                    </item>
+                    <item>
+                        <label>20410</label>
+                        <label2></label2>
+                        <thumb>-</thumb>
+                        <onclick>PlayMedia($ESCINFO[Container(999).ListItem.Trailer])</onclick>
+                    </item>
+                </content>
+            </control>
+        </control>
+        <!--Dialog buttons (hidden)-->
+        <control type="group" id="2003">
+            <visible>false</visible>
+            <control type="button" id="5">
+                <description>play</description>
+            </control>
+        </control>
+    </controls>
+</window>
