@@ -1,14 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<colors>
-    <color name="black">ff111111</color>
-    <color name="background">ff222222</color>
-    <color name="highlight">ff00ae5f</color>
-    <color name="overlay">44ffffff</color>
-    <color name="textActive">fff0f0f0</color>
-    <color name="textDisabled">ff757575</color>
-    <color name="menuDisabled">aaf0f0f0</color>
-    <color name="menuUnselected">ff919191</color>
-    <color name="textboxInactive">99FFFFFF</color>
-    <color name="keyboardInactive">aa212121</color>
-    <color name="keyboardAccent">ffBDBDBD</color>
-</colors>
